# perf_kernel

./: .envrc  .gitignore  .gitmodules  Makefile  README.md  bench_results.ods  flake.nix  hypervisor.c  inner_workings.odp  rust-toolchain  rust-toolchain.toml  shell.nix  vscode.nix
checker/: .dockerignore  .env  Dockerfile  docker-compose.yml
checker/src/: checker.py  gunicorn.conf.py  icmp.py  requirements.txt
crates/bootloader/: bootloader.code-workspace  build.rs
crates/bootloader/src/: boot_info.rs  lib.rs  main.rs  multiboot2_header.s  smp.rs  start.s  vga.rs
crates/cpuio/src/: lib.rs  x86.rs
crates/dyn_frame_alloc/: Cargo.toml  lcov.info
crates/dyn_frame_alloc/.cargo/: config.toml
crates/dyn_frame_alloc/src/: lib.rs  main.rs
crates/multiboot2/multiboot2/: Cargo.toml
crates/multiboot2/multiboot2/src/: lib.rs  memory_map.rs  module.rs
crates/perf_test/: Cargo.toml
crates/perf_test/src/: lib.rs  main.rs
crates/rust-cpuid/src/: lib.rs
crates/uart_16550/src/: lib.rs
crates/x86/: .gitignore  Cargo.toml  build.rs
crates/x86/.cargo/: config
crates/x86/src/: addr.rs  lib.rs
crates/x86/src/instructions/: interrupts.rs  mod.rs  port.rs  random.rs  segmentation.rs  tables.rs  tlb.rs
crates/x86/src/registers/: control.rs  eflags.rs  mod.rs  model_specific.rs
crates/x86/src/structures/: gdt.rs  idt.rs  tss.rs
crates/x86/src/structures/paging/: frame.rs  mod.rs  page.rs  page_table.rs
crates/x86/src/structures/paging/mapper/: mapped_page_table.rs  mod.rs  offset_page_table.rs
crates/x86_64/: lib.code-workspace
crates/x86_64/src/: lib.rs
crates/x86_64/src/instructions/: interrupts.rs  mod.rs  port.rs  segmentation.rs  tables.rs  tlb.rs
crates/x86_64/src/registers/: control.rs  model_specific.rs  rflags.rs  xcontrol.rs
glue_gun/: Cargo.toml  glue_gun.code-workspace
glue_gun/src/: run.rs
kernel/: .bochsrc  Cargo.toml  build.rs  kernel.code-workspace  restart.sh  x86_64-os.json
kernel/.cargo/: config.toml
kernel/src/: acpi_regs.rs  allocator.rs  apic.rs  apic_regs.rs  bench.rs  corestate.rs  interrupts.rs  klog.rs  lib.rs  main.rs  memory.rs  serial.rs  time.rs  tss.rs
kernel/src/allocator/: fixed_size_block.rs
kernel/tests/: basic_boot.rs  heap_allocator.rs  should_panic.rs  stack_overflow.rs
kernel_inspector/: Cargo.toml  build.rs  wrapper.h
kernel_inspector/src/: lib.rs  main.rs
nix/: sources.json
nix/codium/: updateSettings.nix  vscodeEnv.nix  vscodeExtName.nix  vscodeExts2nix.nix  vscodeWithConfiguration.nix
nix/ipxe/: default.nix
parse-gdt/: Cargo.toml
parse-gdt/src/: main.rs
pxe/: Cargo.toml
pxe/src/: main.rs  utils.rs
scripts/: bochs_sym.sh  gdb.sh  qemu-pxe.sh  remote_test.sh
svm_kernel/: .bochsrc  Cargo.toml  bench.py  bochs_commands  exploit.py  generate_challenges.sh  kernel.code-workspace  login.py  nat_interface.sh  restart.sh  run.sh  set_static_ip.sh  spam.py  try_nat.sh  watch.sh
svm_kernel/.cargo/: config  config.toml
svm_kernel/scripts/: generate_challenges.sh  nat_interface.sh  set_static_ip.sh  tap_interface.sh
svm_kernel/src/: acpi.rs  acpi_regs.rs  allocator.rs  apic.rs  apic_regs.rs  bench.rs  corestate.rs  default_interrupt.rs  gdt.rs  interrupts.rs  klog.rs  lib.rs  main.rs  memory.rs  mylog.rs  networking.rs  pci.rs  print.rs  rtl8139.rs  serial.rs  server.rs  smp.rs  time.rs  tss.rs  vga.rs
svm_kernel/src/allocator/: bump.rs  fixed_size_block.rs
svm_kernel/tests/: basic_boot.rs  heap_allocator.rs  should_panic.rs  stack_overflow.rs
tools/: gdb.sh  monitor.sh  remote_test.sh  restart.sh
tools/glue_gun/: README.md
tools/glue_gun/src/: config.rs  main.rs  run.rs
