[package]
name = "glue_gun"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "=1.13.0"
log = "=0.4.14"
toml = "=0.5.8"
cargo_metadata = "=0.14.1"
clap = "=2.33.3"
anyhow = "=1.0.39"
json = "=0.12.4"
thiserror = "=1.0.30"
wait-timeout = "=0.2.0"