[package]
name = "perf_kernel"
version = "0.1.0"
authors = ["Luis Hebendanz <luis.nixos@gmail.com>"]
edition = "2018" 

# TODO: cargo test --release does not work if enabled
[profile.release]
panic = "abort"
lto = "fat"
opt-level = 3
debug=true
codegen-units=1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pc-keyboard = "=0.5.1"
log = {version = "=0.4.11",  features = ["release_max_level_trace"] }
modular-bitfield = "=0.11.2"
spin = "=0.9.2"

pic8259_simple = { git="https://github.com/Luis-Hebendanz/pic8259_simple.git"  }
uart_16550 = { git = "https://github.com/Luis-Hebendanz/uart_16550.git"  }
rangeset = { git = "https://github.com/Luis-Hebendanz/rangeset.git" }
x86_64 = { git= "https://github.com/Luis-Hebendanz/x86_64.git", branch = "new_registers" }
bootloader = { git="https://github.com/Luis-Hebendanz/rs_bootloader.git" }
raw-cpuid = { git="https://github.com/Luis-Hebendanz/rust-cpuid.git" }

# cargo run command options
[package.metadata.glue_gun]
run-command = ["qemu-system-x86_64","-monitor", "tcp:localhost:8124,server,nowait", "-no-reboot","-cpu" ,"EPYC-v1" ,"-smp","cores=4", "-cdrom", "{}","-serial", "stdio", "-display", "none", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-m", "4G", "-name", "perf_kernel,process=perf_kernel"]
debug-run-command = ["qemu-system-x86_64", "-monitor", "tcp:localhost:8124,server,nowait", "-no-reboot","-cpu" ,"EPYC-v1" ,"-smp","cores=4", "-cdrom", "{}","-serial", "stdio", "-display", "none", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-m", "4G",  "-name", "perf_kernel,process=perf_kernel", "-s", "-S"]
#run-command = ["qemu-kvm","-monitor", "tcp:localhost:8124,server,nowait", "-no-reboot","-cpu", "host","-smp","cores=8","-cdrom", "{}", "-display", "none" ,"-serial", "stdio", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-m", "4G", "-name", "perf_kernel,process=perf_kernel"]

# IPXE
# run-command = ["qemu-kvm","-monitor", "tcp:localhost:8124,server,nowait", "-no-reboot","-cpu", "host","-smp","cores=8","-fda" ,"$IPXE/ipxe.dsk", "-display", "none" ,"-serial", "stdio", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-m", "4G", "-name", "perf_kernel,process=perf_kernel", "-net", "nic", "-net", "tap,ifname=kmania_tap0,script=no,downscript=no"]
#debug-run-command = ["qemu-kvm","-monitor", "tcp:localhost:8124,server,nowait", "-no-reboot","-cpu", "host","-smp","cores=8","-fda" ,"$IPXE/ipxe.dsk","-serial", "stdio", "-display", "none", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-m", "4G",  "-name", "perf_kernel,process=perf_kernel", "-s", "-S", "-net", "nic", "-net", "tap,ifname=kmania_tap0,script=no,downscript=no"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 55          # (in seconds)
