[package]
name = "svm_kernel"
version = "0.1.0"
authors = ["Luis Hebendanz <luis.nixos@gmail.com>"]
edition = "2018"

# TODO: cargo test --release does not work if enabled
[profile.release]
panic = "abort"
lto = "fat"
opt-level = 3
debug=true
codegen-units=1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pc-keyboard = "=0.5.1"
log = {version = "=0.4.11", features = ["release_max_level_trace"] }
modular-bitfield = "=0.11.2"
spin = "=0.9.2"

pic8259_simple = { path="external/pic8259_simple"  }
uart_16550 = { path = "external/uart_16550"  }
rangeset = {path = "external/rangeset"}
x86_64 = {path= "external/x86_64"}
bootloader = { path="external/bootloader" }

# cargo run command options
[package.metadata.bootimage]
#run-command = ["qemu-system-x86_64","-monitor", "tcp:localhost:8124,server,nowait", "-no-reboot","-cpu" ,"EPYC-v1" ,"-smp","cores=3", "-cdrom", "{}","-serial", "stdio", "-display", "none", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-m", "4G", "-name", "svm_kernel,process=svm_kernel"]
#run-command = ["qemu-system-x86_64", "-monitor", "tcp:localhost:8124,server,nowait", "-no-reboot","-cpu" ,"EPYC-v1" ,"-smp","cores=2", "-cdrom", "{}","-serial", "stdio", "-display", "none", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-m", "4G",  "-name", "svm_kernel,process=svm_kernel", "-s", "-S"]
run-command = ["qemu-kvm","-monitor", "tcp:localhost:8124,server,nowait", "-no-reboot","-cpu", "host","-smp","cores=8", "-cdrom", "{}","-serial", "stdio", "-display", "none", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-m", "4G", "-name", "svm_kernel,process=svm_kernel"]
#run-command = ["qemu-kvm","-monitor", "tcp:localhost:8124,server,nowait", "-no-reboot","-cpu", "host","-smp","cores=2", "-cdrom", "{}","-serial", "stdio", "-display", "none", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-m", "4G",  "-name", "svm_kernel,process=svm_kernel", "-s", "-S"]
# run-command = ["qemu-kvm","-cpu","host", "-m", "4G", "-smp","cores=4", "-cdrom", "{}","-serial", "stdio" ]
build-command = ["build"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 55          # (in seconds)
